# Roomie

./: README.md
docs/: interface.md
docs/architecture/: system_architecture.xml
docs/interface_specifiaction/: rms_rgui_interface.md  rms_vs_interface.md
docs/state_diagram/: .$hardware_archictecture.drawio.bkp  .$robot_state.drawio.bkp  call_mission_state.drawio  guide_mission_state.drawio  hardware_archictecture.drawio  robot_state.drawio
docs/techinal_research/depth_camera/: hello.md
esp32_firmware/arm_unit/src/: README.md
esp32_firmware/io_controller/src/: README.md
gui/admin_gui/: README.md
gui/guest_gui/: README.md
gui/staff_gui/: README.md  config.py  staff_app.py  test_rms.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/roomie_agui/share/roomie_agui/: package.bash  package.dsv  package.sh  package.zsh
install/roomie_msgs/share/roomie_msgs/: local_setup.dsv  local_setup.sh  package.dsv  package.sh  package.xml  package.zsh
install/roomie_rc/share/roomie_rc/: package.bash  package.dsv  package.ps1  package.sh
install/roomie_rgui/share/roomie_rgui/: package.dsv  package.sh  package.xml
install/roomie_rms/share/roomie_rms/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/roomie_vs/share/roomie_vs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros2_ws/install/: README.md  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/roomie_vs/share/roomie_vs/: package.dsv  package.ps1  package.sh  package.xml
ros2_ws/log/: README.md  latest_build
ros2_ws/src/bringup/: README.md
ros2_ws/src/roomie_agui/: package.xml  setup.cfg  setup.py
ros2_ws/src/roomie_agui/roomie_agui/: __init__.py  admin_gui.ui  roomie_admin.py
ros2_ws/src/roomie_msgs/: CMakeLists.txt
ros2_ws/src/roomie_msgs/action/: ReturnCountdown.action  StartCountdown.action
ros2_ws/src/roomie_msgs/msg/robot_status/: RoomiePose.msg
ros2_ws/src/roomie_msgs/srv/door_elevator/: ElevatorStatus.srv
ros2_ws/src/roomie_msgs/srv/robot_control/: SetVSMode.srv
ros2_ws/src/roomie_msgs/srv/sensor/: ButtonStatus.srv  SpaceAvailability.srv
ros2_ws/src/roomie_rc/: setup.py
ros2_ws/src/roomie_rc/config/: README.md
ros2_ws/src/roomie_rc/launch/: README.md
ros2_ws/src/roomie_rc/resource/: README.md
ros2_ws/src/roomie_rgui/: setup.cfg  setup.py
ros2_ws/src/roomie_rms/: setup.cfg  setup.py
ros2_ws/src/roomie_vs/: setup.cfg  setup.py
simulation/gazebo_worlds/: README.md
(+1085 files in other folders)
