<?xml version="1.0"?>
<package format="3">
  <name>roomie_vs</name>
  <version>1.0.0</version>
  <description>Vision Service</description>
  <maintainer email="dev@roomie.com">Dev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>roomie_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 